@@ -30,6 +30,7 @@ Cacti CHANGELOG
 -bug: wrong index used for Data Queries using VALUE/REGEXP
 -bug: fix issue with title variable replacement failing when no host is associated with graph
 -bug: Cacti generating MySQL 1100 Errors when Modifying the Tree
+-bug: Resolve 'Fatal error: Cannot use string offset as an array' in lib/data_query.php
 
 0.8.7h
 -bug#0001403: Reapply Suggested Names does not work correctly for graphs and data sources not associated with Data Queries
